# PersonalFinanceTracker

./: .env.example  Makefile  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/api/: __init__.py  deps.py
app/api/endpoints/: categories.py  notes.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_category.py  crud_note.py  crud_user.py
app/db/: seed.py
app/models/: __init__.py  base.py  category.py  note.py  user.py
app/schemas/: __init__.py  category.py  note.py  user.py  validators.py
scripts/: check_connection.py  check_tables.py  create_tables.py  seed_data.py  test_models.py
tests/: conftest.py  test_categories_api.py  test_crud.py  test_main.py  test_models.py  test_notes_api.py  test_schemas.py  test_validators.py
