[project]
name = "finance-tracker"
version = "0.1.0"
description = "Personal Finance Management API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
]

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.11.0",
    "httpx==0.25.1",
    "isort==5.12.0",
    "flake8==6.1.0",
    "pytest-asyncio>=0.21.0"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pytest.ini_options.markers]
asyncio = "mark test as using asyncio"
slow = "marks tests as slow"